# CrustCore

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  INVARIANTS.md  NOTICE  README.md  ROADMAP.md  SECURITY.md  THREAT_MODEL.md  rust-toolchain.toml
.cargo/: config.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
benches/: README.md  event_append.rs  kernel_step.rs  path_confine.rs  policy_check.rs
crates/crustcore/: Cargo.toml
crates/crustcore-backend/: Cargo.toml
crates/crustcore-backend/src/: integrate.rs  lib.rs  verify.rs  worker.rs
crates/crustcore-chat/: Cargo.toml
crates/crustcore-chat/src/: converse.rs  lib.rs  persona.rs  route.rs  session.rs  steer.rs  terminal.rs
crates/crustcore-cli/: Cargo.toml
crates/crustcore-cli/src/: lib.rs
crates/crustcore-daemon/: Cargo.toml
crates/crustcore-daemon/src/: admin.rs  advisor.rs  chat.rs  exec.rs  github.rs  github_commands.rs  lib.rs  multirepo.rs  onboarding.rs  product.rs  registry.rs  repo_profiler.rs  reviewer.rs  router.rs  runtime.rs  score.rs  selfimprove.rs  slack.rs  supervisor.rs  task.rs  task_loop.rs  telegram.rs  webhook.rs
crates/crustcore-dev/: Cargo.toml
crates/crustcore-dev/src/: assets.rs  auth.rs  backend.rs  config.rs  lib.rs  mutation.rs  request.rs  route_class.rs  serve.rs  serve_entry.rs  stream.rs
crates/crustcore-dev/src/assets/: inspector.css  inspector.html
crates/crustcore-dev/src/views/: approvals.rs  cockpit.rs  flow.rs  inspector.rs  mcp.rs  mod.rs  provider.rs  replay.rs
crates/crustcore-dev/tests/: redteam_devui.rs
crates/crustcore-eval/: Cargo.toml
crates/crustcore-eval/src/: lib.rs
crates/crustcore-eval/tests/: golden.rs  redteam.rs
crates/crustcore-eventlog/: Cargo.toml
crates/crustcore-eventlog/src/: lib.rs
crates/crustcore-flow/: Cargo.toml
crates/crustcore-flow/examples/: consult_implement_verify.rs
crates/crustcore-flow/src/: agentic_flows.rs  budget.rs  builder.rs  drivers.rs  engine.rs  graph.rs  lib.rs  outcome.rs  predicate.rs
crates/crustcore-flow/src/live/: mod.rs
crates/crustcore-flow/tests/: live_flow.rs  redteam_flow.rs
crates/crustcore-full/: Cargo.toml
crates/crustcore-full/src/: lib.rs
crates/crustcore-index/: Cargo.toml
crates/crustcore-index-rag/: Cargo.toml
crates/crustcore-index-rag/src/: index.rs  lib.rs  plan.rs
crates/crustcore-index-rag/src/chunk/: ast.rs  mod.rs  symbol.rs
crates/crustcore-index-rag/src/store/: http.rs  lancedb.rs  local.rs  mock.rs  mod.rs  qdrant.rs
crates/crustcore-index-rag/tests/: rag.rs  redteam_rag.rs
crates/crustcore-index/src/: ast.rs  embed.rs  exec.rs  lib.rs
crates/crustcore-kernel/: Cargo.toml
crates/crustcore-kernel/src/: action.rs  event.rs  kernel.rs  lib.rs  state.rs
crates/crustcore-mcp/: Cargo.toml
crates/crustcore-mcp/src/: lib.rs  server.rs  transport.rs
crates/crustcore-mcp/tests/: mcp_call.rs
crates/crustcore-net/: Cargo.toml
crates/crustcore-net/src/: config.rs  credsource.rs  embed.rs  github.rs  githubapp.rs  lib.rs  modality.rs  providers.rs  rerank.rs  telegram.rs  transport.rs
crates/crustcore-net/tests/: github_rest.rs  helper_subprocess.rs  live_adapters.rs  redteam_c1_modality.rs
crates/crustcore-netproto/: Cargo.toml
crates/crustcore-netproto/src/: json.rs  lib.rs
crates/crustcore-path/: Cargo.toml
crates/crustcore-path/src/: lib.rs
crates/crustcore-policy/: Cargo.toml
crates/crustcore-policy/src/: caps.rs  decision.rs  lib.rs
crates/crustcore-receipts/: Cargo.toml
crates/crustcore-receipts/src/: join.rs  lib.rs
crates/crustcore-runner/: Cargo.toml
crates/crustcore-runner/src/: lib.rs
crates/crustcore-sandbox/: Cargo.toml
crates/crustcore-sandbox/src/: lib.rs
crates/crustcore-secrets/: Cargo.toml
crates/crustcore-secrets/src/: keychain.rs  lib.rs  store.rs  token_stream.rs
crates/crustcore-session/: Cargo.toml
crates/crustcore-session/examples/: gen_fixture.rs
crates/crustcore-session/fixtures/: clean_session.cclog
crates/crustcore-session/src/: artifact.rs  compact.rs  id.rs  lease.rs  lib.rs  resume.rs  serde_compat.rs  service.rs  snapshot.rs  view.rs
crates/crustcore-session/tests/: redteam_session.rs  session_roundtrip.rs
crates/crustcore-session/tests/common/: mod.rs
crates/crustcore-telemetry/: Cargo.toml  README.md
crates/crustcore-telemetry/src/: auth.rs  config.rs  lib.rs  project.rs  redact.rs  run.rs  semconv.rs  usage.rs
crates/crustcore-telemetry/src/export/: mod.rs  otlp.rs
crates/crustcore-telemetry/tests/: projection.rs  redteam_leak_canary.rs
crates/crustcore-tool-macro/: Cargo.toml
crates/crustcore-tool-macro/examples/: crust_tool_demo.rs
crates/crustcore-tool-macro/src/: codegen_io.rs  codegen_risk.rs  codegen_tests.rs  lib.rs  parse.rs  schema.rs
crates/crustcore-tool-macro/tests/: compile_fail.rs  generated_tool.rs
crates/crustcore-tool-macro/tests/ui/: missing_host.rs  missing_host.stderr  non_result_return.rs  non_result_return.stderr  self_authorize.rs  self_authorize.stderr  unknown_reversibility.rs  unknown_reversibility.stderr  unsupported_type.rs  unsupported_type.stderr
crates/crustcore-toolkit/: Cargo.toml
crates/crustcore-toolkit/examples/: safe_tool.rs
crates/crustcore-toolkit/src/: lib.rs
crates/crustcore-toolkit/tests/: safe_path.rs
crates/crustcore-types/: Cargo.toml
crates/crustcore-types/src/: budget.rs  hash.rs  ids.rs  lib.rs  refs.rs  status.rs  text.rs  time.rs
crates/crustcore-worktree/: Cargo.toml
crates/crustcore-worktree/src/: lib.rs  tools.rs
crates/crustcore/examples/: write_demo_log.rs
crates/crustcore/src/: main.rs
docs/: advisor-executor.md  architecture.md  backend-contract.md  chat.md  cot-streaming.md  event-log.md  github.md  live-socket-validation.md  maintainer-agent.md  mcp.md  model-routing.md  nano-size-budget.md  persona.md  policy.md  product-stack.md  receipts.md  release-notes-v0.5.0.md  releasing.md  roadmap-v0.2.md  roadmap-v0.6.md  sandbox.md  secrets.md  security-model.md  self-improvement.md  telegram.md  (+1 more)
xtask/: Cargo.toml
xtask/src/: main.rs
(+11 files in other folders)
