[package]
name = "crustcore-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Long-running CrustCore runtime: Telegram/GitHub loops, leases, supervision."

[dependencies]
crustcore-types = { workspace = true }
crustcore-kernel = { workspace = true }
crustcore-policy = { workspace = true }
crustcore-secrets = { workspace = true }
crustcore-net = { workspace = true }
# TODO(P9-net/P10): the Telegram Bot API HTTP long-polling + sendMessage (in
# crustcore-net, authenticated by the credential proxy), the GitHub task/PR loop,
# the admin socket, and leases/heartbeats/recovery. The Phase-9 runtime-channel
# logic (allowlist, dedupe, normalization, commands, queue/steer, nonce approvals,
# typed outbound rendering) is std-only and implemented in `telegram`.
