[package]
name = "crustcore-index-rag"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Optional RAG layer for CrustCore: pluggable vector-store adapter, repo chunker, symbol-aware chunk metadata, and a bounded query planner. Off-nano; memory is never authority."

[dependencies]
# DEFAULT build links NO heavy third-party dep: the local backend reuses
# crustcore-index's dependency-free `VectorMemory`/`cosine`/`HashEmbedder`, and the
# redact-then-bound boundary is `crustcore-index::{select_context, build_bundle,
# semantic_select}` + `crustcore-secrets::Redactor`. Every external-store SDK and the
# tree-sitter `ast` backend live behind their own off-by-default cargo feature, so the
# nano graph (first-party only) never selects them — proven by `cargo xtask forbidden-deps`.
crustcore-index = { workspace = true }
crustcore-secrets = { workspace = true }
crustcore-types = { workspace = true }

# OPTIONAL: the tree-sitter AST backend for precise symbol spans (`ast` feature only).
# Never default, never linked into nano (off-by-default `dep:` deps are not selected by
# the nano graph). tree-sitter brings its own (audited, upstream) `unsafe` C bindings; our
# code stays `#![forbid(unsafe_code)]`-safe and only walks the parsed tree.
tree-sitter = { version = "0.25", optional = true }
tree-sitter-rust = { version = "0.24", optional = true }

# OPTIONAL: the external vector-store HTTP clients (`qdrant` / `lancedb` features only).
# `ureq` is a small, blocking, rustls-backed HTTP client (the same one `crustcore-net` and
# `crustcore-telemetry` use for their live seams) — NOT a second Tokio/TLS runtime — and
# `serde_json` shapes the request/response bodies. Both are off-by-default and gated to the
# external-store features, so the default build and the nano graph link neither (proven by
# `cargo xtask forbidden-deps` and the default-tree check below).
ureq = { version = "2.12", optional = true }
serde_json = { version = "1", optional = true }

[features]
default = []
# Live text->vector embedding via B3's net-helper seam (`TODO(B3-embed-live)`); the
# deterministic core uses `HashEmbedder` and never enables this in CI.
live = []
# Persistent local store snapshot (reuses crustcore-index's dependency-free snapshot);
# the seam is `TODO(C5-persist)`, off by default.
persist = []
# Tree-sitter / AST symbol spans for chunk boundaries (C5-ast, implemented for Rust). The
# default remains the conservative grep/line-chunk fallback, so this is off by default and
# not in CI; enabling it links the optional tree-sitter deps (never in nano). Additional
# grammars are an additive follow-on (one `dep:tree-sitter-<lang>` + a match arm each).
ast = ["dep:tree-sitter", "dep:tree-sitter-rust"]
# External vector-store backends, each a thin HTTP adapter routing auth via
# `CredentialProxy`. The request-building + response-parsing is implemented and unit-tested;
# only the live socket round-trip is `TODO(C5-<backend>-live)`. Off by default, never in
# nano — enabling either links the small `ureq`/`serde_json` clients (shared by both).
qdrant = ["dep:ureq", "dep:serde_json"]
lancedb = ["dep:ureq", "dep:serde_json"]
