[package]
name = "crustcore-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "MCP gateway/client/server and code-mode support for CrustCore."

[dependencies]
crustcore-types = { workspace = true }
crustcore-secrets = { workspace = true }
crustcore-receipts = { workspace = true }
# TODO(P13-net): add `rmcp` or a custom MCP JSON-RPC client + the live stdio/HTTP
# transports here (per feature) — never leaking into nano (CLAUDE.md §5.1). The
# Phase-13 registry, gateway policy check, result redaction, receipting, and
# code-mode stub descriptors are std-only and implemented now; the live transport
# + sandboxed stub execution reuse the Phase-4 sandbox and need network, so they
# are deferred.
