[package]
name = "crustcore-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "MCP gateway/client/server and code-mode support for CrustCore."

[dependencies]
crustcore-types = { workspace = true }
crustcore-secrets = { workspace = true }
crustcore-receipts = { workspace = true }
# Custom MCP JSON-RPC framing/parsing (P13-net). A normal dep: the protocol + the
# gateway call flow are exercised in CI with an in-process `MockMcp` (no network).
# `crustcore-mcp` is a capability-pack SIDECAR the nano binary never links (gated
# behind the `mcp` feature of `crustcore`), so serde_json never enters the nano graph
# (CLAUDE.md §5.1; the `forbidden-deps` nano check lists serde_json). The local
# **stdio** transport is std `process` + this; a remote **HTTP** transport would reuse
# `crustcore-net` and is the deferred `TODO(P13-net-http)`.
serde_json = "1"
