[package]
name = "crustcore-net"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Network/provider sidecar for CrustCore (model transport, Telegram, GitHub)."

[dependencies]
crustcore-types = { workspace = true }
crustcore-netproto = { workspace = true }
# JSON shaping/parsing for the live provider adapters. A normal (non-optional) dep:
# the adapters' parse/map/stream logic is exercised in CI with a canned ReplayClient
# (no network), so serde_json must always be available. This is a *sidecar* crate
# (3–8 MB tier) the nano binary never links — it spawns this helper over the std-only
# `crustcore-netproto` protocol — so serde_json never enters the nano graph
# (CLAUDE.md §5.1; enforced by `xtask forbidden-deps`, which checks nano + the
# `crustcore --features net` tree, neither of which depends on this crate).
serde_json = "1"

# The real HTTP/TLS transport (`UreqClient`) for live providers, behind the `live`
# feature ONLY — so the default build (workspace + CI + the default mock helper)
# links no HTTP/TLS stack. `ureq` is a small, blocking, rustls-backed client matching
# the sync `Provider::complete` contract (no async runtime). `forbidden-deps` asserts
# the default crustcore-net build links no ureq/rustls.
ureq = { version = "2", optional = true }

[features]
# Enables the real network transport (`UreqClient`) + the `live_engine` builder. Off
# by default; CI runs the adapter tests with a ReplayClient, not this.
live = ["dep:ureq"]

# The sidecar helper binary nano spawns and talks to over the local protocol.
[[bin]]
name = "crustcore-net"
path = "src/bin/helper.rs"
